[package]
name = "my_model_inference_backend"
version = "0.1.0"
edition = "2018"

[dependencies]
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
tract-onnx = "0.16.0"
ndarray = "0.15.3"  # Correct crate for arrays
prost = "0.9.0"
anyhow = "1.0"

[lib]
crate-type = ["cdylib"]  # Ensure this is set for canister deployment